--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "angular": "^1.6.0",
     "angular-ui-router": "^0.3.2",
-    "angular-route": "latest"
+    "angular-route": "latest",
+    "AngularDevise": "angular-devise#^1.3.0"
   }
 }
